implements methods open, close, destroy

--- a/index.html
+++ b/index.html
@@ -11,27 +11,20 @@
     <div class="container">
       <h3>Lorem</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
-        labore.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam
+        odit blanditiis reiciendis aliquam vero unde sequi, similique quos
+        asperiores soluta ratione animi excepturi, impedit hic recusandae
+        reprehenderit nisi eligendi tenetur. Voluptate officiis molestiae aut
+        asperiores repellat suscipit hic ipsa recusandae, laborum nostrum, ex
+        accusantium reprehenderit sit numquam architecto perferendis animi quo
+        quas vitae sequi natus enim incidunt similique. Dolor iure illo eligendi
+        ratione suscipit alias commodi reiciendis, voluptatum libero natus
+        reprehenderit sunt? Placeat, atque ducimus maiores quidem libero
+        necessitatibus. Excepturi voluptatem nostrum animi minima tenetur quasi
+        cum amet consequatur ullam rem corporis fuga sapiente, quisquam
+        similique recusandae temporibus iusto.
       </p>
       <a href="#">link</a>
-    </div>
-    <div class="wmodal">
-      <div class="wmodal-overlay">
-        <div class="wmodal-window">
-          <div class="wmodal-header">
-            <h1>Header</h1>
-          </div>
-          <div class="wmodal-body">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-          <div class="wmodal-footer">
-            <button>Cancel</button>
-            <button>OK</button>
-          </div>
-        </div>
-      </div>
     </div>
     <script src="./base.js"></script>
     <script src="./plugins/modal.js"></script>
