added confirm window

--- a/index.html
+++ b/index.html
@@ -14,25 +14,12 @@
   </head>
   <body>
     <div class="container">
-      <h3>Lorem</h3>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam
-        odit blanditiis reiciendis aliquam vero unde sequi, similique quos
-        asperiores soluta ratione animi excepturi, impedit hic recusandae
-        reprehenderit nisi eligendi tenetur. Voluptate officiis molestiae aut
-        asperiores repellat suscipit hic ipsa recusandae, laborum nostrum, ex
-        accusantium reprehenderit sit numquam architecto perferendis animi quo
-        quas vitae sequi natus enim incidunt similique. Dolor iure illo eligendi
-        ratione suscipit alias commodi reiciendis, voluptatum libero natus
-        reprehenderit sunt? Placeat, atque ducimus maiores quidem libero
-        necessitatibus. Excepturi voluptatem nostrum animi minima tenetur quasi
-        cum amet consequatur ullam rem corporis fuga sapiente, quisquam
-        similique recusandae temporibus iusto.
-      </p>
-      <a href="#">link</a>
+      <h3>Fruits Store (Javascript)</h3>
+      <div class="card-group" id="render"></div>
     </div>
     <script src="./base.js"></script>
     <script src="./plugins/modal.js"></script>
+    <script src="./plugins/confirm.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
